--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "astro": "^1.9.0",
     "astro-icon": "^0.8.0"
+  },
+  "devDependencies": {
+    "accessible-astro-components": "^1.6.5"
   }
 }
