--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@astrojs/partytown": "^1.2.0",
+    "@iconify-json/fa": "^1.2.1",
+    "@iconify-json/fluent": "^1.2.20",
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/icomoon-free": "^1.2.1",
+    "@iconify-json/mdi": "^1.2.3",
     "accessible-astro-components": "^2.0.0",
-    "astro": "4.5.7",
+    "astro": "4.16.18",
     "astro-icon": "^1.0.0",
     "astro-webmanifest": "^1.0.0",
     "astrojs-service-worker": "^2.0.0"
