--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/partytown": "^2.0.0",
-    "@iconify-json/fa": "^1.2.1",
-    "@iconify-json/fluent": "^1.2.20",
-    "@iconify-json/ic": "^1.2.2",
-    "@iconify-json/icomoon-free": "^1.2.1",
-    "@iconify-json/mdi": "^1.2.3",
-    "accessible-astro-components": "^5.0.0",
-    "astro": "5.15.6",
-    "astro-icon": "^1.0.0",
-    "astro-webmanifest": "^1.0.0",
-    "astrojs-service-worker": "^2.0.0"
+    "@astrojs/partytown": "2.1.4",
+    "@iconify-json/fa": "1.2.2",
+    "@iconify-json/fluent": "1.2.34",
+    "@iconify-json/ic": "1.2.4",
+    "@iconify-json/icomoon-free": "1.2.1",
+    "@iconify-json/mdi": "1.2.3",
+    "accessible-astro-components": "5.0.3",
+    "astro": "5.15.7",
+    "astro-icon": "1.1.5",
+    "astro-webmanifest": "1.0.0",
+    "astrojs-service-worker": "2.0.0"
   },
   "devDependencies": {
     "pagecrypt": "7.0.2",
