feat(ar): AR体験ページを追加
ARマーカーを使用した3Dオブジェクト表示機能を実装しました。
ユーザーがカメラを向けると、マーカーが認識され3Dオブジェクトが表示されます。

* AR.jsとA-Frameを使用
* マーカー検出時の情報表示機能を追加
* 戻るボタンを実装

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --host",
+    "start": "astro dev --host",
     "build": "astro build",
     "encrypt": "pagecrypt dist/index.html dist/index.html $PASSWORD",
     "serve": "serve dist",
